assets/css/style.css
body{
    overflow: hidden;
    box-sizing: border-box;
}
.center{
    text-align: center;
}

.border{
    border: 1px black solid;
}

.name{
    background-color: #333;
    color: white;
}

.nav-item{
    margin-top: 10px;
}

.nav-link{
    color: #333;
    font-size: 20px;
}

.space{
    margin-top: 10px;
}

section{
    margin-top: 2em;
    margin-bottom: 200px;
}

.inside{
    padding: 20px;
}

.sectionTop{
    border-bottom: 3px red solid;
}

.sectionMid{
    margin-top: 10px;
}

.box{
    height: 10px;
    background: linear-gradient(90deg, navy, deepskyblue);
}

.sectionTitle{
    border-bottom: black 1px solid;
}

